--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -30,3 +30,12 @@
 .navbar ul li a:hover {
     color: tomato;
 }
+
+@media only screen and (max-width: 760px){
+    .logo {
+        margin-left: 0px !important;
+    }
+    .navbar ul {
+        margin-right: 0px;
+    }
+}
