profile made responsive

--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -2,7 +2,7 @@
     height: auto;
     width: 100%;
     padding: 15px 0px;
-    background-color: tomato;
+    background-color: #FFA898;
 }
 .logo {
     text-decoration: none;
